--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,11 @@
     -->
     <!-- Adding Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Noty -->
+    <link href="lib/noty.css" rel="stylesheet">
+    <script src="lib/noty.js" type="text/javascript" defer></script>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Julius+Sans+One|Maven+Pro&display=swap" rel="stylesheet">
 
     <title>Book-Finder</title>
   </head>
